bushgrade.txt
--- 0 seconds


### Cleaning old files (to prevent this, export DEBUG=1) ###
rm -f objects/Ambassador.o objects/Game.o objects/Assassin.o objects/Player.o objects/Contessa.o objects/Duke.o objects/Captain.o *.o test* 
rm -f StudentTest*.cpp


### Check 3: all tests should pass
! make -f Makefile test
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile TestRunner.cpp -o TestRunner.o
curl https://raw.githubusercontent.com/RazGavrieli/Board-Game-Coup/master/Test.cpp > StudentTest1.cpp
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100  9096  100  9096    0     0  19069      0 --:--:-- --:--:-- --:--:-- 19069
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile StudentTest1.cpp -o StudentTest1.o
curl https://raw.githubusercontent.com/Esther-Bi/B-HW4-Test/main/Test.cpp > StudentTest2.cpp
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100  7683  100  7683    0     0  17461      0 --:--:-- --:--:-- --:--:-- 17461
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile StudentTest2.cpp -o StudentTest2.o
curl https://raw.githubusercontent.com/BenjaminSaldman/coup-a/main/Test.cpp > StudentTest3.cpp
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100  4574  100  4574    0     0   6571      0 --:--:-- --:--:-- --:--:--  6571
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile StudentTest3.cpp -o StudentTest3.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile sources/Ambassador.cpp -o objects/Ambassador.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile sources/Game.cpp -o objects/Game.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile sources/Assassin.cpp -o objects/Assassin.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile sources/Player.cpp -o objects/Player.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile sources/Contessa.cpp -o objects/Contessa.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile sources/Duke.cpp -o objects/Duke.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources --compile sources/Captain.cpp -o objects/Captain.o
clang++-9 -std=c++2a -Werror -Wsign-conversion -Isources TestRunner.o StudentTest1.o StudentTest2.o StudentTest3.o objects/Ambassador.o objects/Game.o objects/Assassin.o objects/Player.o objects/Contessa.o objects/Duke.o objects/Captain.o -o test
! timeout 50 ./test
[doctest] doctest version is "2.3.7"
[doctest] run with "--help" for options
===============================================================================
[doctest] test cases:     19 |     19 passed |      0 failed |      0 skipped
[doctest] assertions:    321 |    321 passed |      0 failed |
[doctest] Status: SUCCESS!
--- 7 seconds
### Score 3: 100


### Check 4: clang-tidy should run without warnings in user code
! timeout 50 make -f Makefile tidy
clang-tidy sources/Ambassador.cpp sources/Game.cpp sources/Assassin.cpp sources/Player.cpp sources/Contessa.cpp sources/Duke.cpp sources/Captain.cpp -extra-arg=-std=c++2a -checks=bugprone-*,clang-analyzer-*,cppcoreguidelines-*,performance-*,portability-*,readability-*,-cppcoreguidelines-pro-bounds-pointer-arithmetic,-cppcoreguidelines-owning-memory --warnings-as-errors=* --
3516 warnings generated.
7032 warnings generated.
10564 warnings generated.
14117 warnings generated.
17657 warnings generated.
21167 warnings generated.
24683 warnings generated.
/home/itamar/Desktop/CPP/cpp-tasks/coup-b/sources/Game.cpp:4:36: error: method 'players' can be made const [readability-make-member-function-const,-warnings-as-errors]
    std::vector<std::string> Game::players(){
                                   ^
                                             const
/home/itamar/Desktop/CPP/cpp-tasks/coup-b/sources/Game.cpp:17:9: error: do not use 'else' after 'return' [readability-else-after-return,-warnings-as-errors]
        else{
        ^~~~~
Suppressed 24681 warnings (24681 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
2 warnings treated as errors
make: *** [Makefile:41: tidy] Error 2
*** Command failed. Exit code: 2 ***
--- 15 seconds
### Score 4: 0


### Check 5: valgrind should run without errors
! timeout 50 make -f Makefile valgrind
valgrind --tool=memcheck -v --leak-check=full --show-leak-kinds=all  --error-exitcode=99 ./test 2>&1 | { egrep "lost| at " || true; }
--- 15 seconds
### Score 5: 100


Grade: 80

